<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity.AddAddressActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_4">

            <EditText
                android:id="@+id/fName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="28"
                android:textSize="@dimen/sp_14"                android:hint="@string/full_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fNameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_4">

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="28"
                android:textSize="@dimen/sp_14"                android:hint="@string/phone_number"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/localityLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phoneLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_4">

            <EditText
                android:id="@+id/locality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="28"
                android:textSize="@dimen/sp_14"                android:hint="@string/your_locality"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/streetLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/localityLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_4">

            <EditText
                android:id="@+id/street"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="28"
                android:textSize="@dimen/sp_14"                android:hint="@string/house_no_street_area"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/landmarkLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/streetLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_4">

            <EditText
                android:id="@+id/landmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="28"
                android:textSize="@dimen/sp_14"
                android:hint="@string/landmark"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_click_background"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>
