<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewGetOTP"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/enter_your_phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGetOTP"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/enter_your_number"
            android:inputType="number"
            android:maxLength="15"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnGetOTP"
            style="?attr/actionButtonStyle"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/et_mobile_number"
            android:layout_alignStart="@+id/et_mobile_number"
            android:layout_below="@+id/et_mobile_number"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="23dp"
            android:background="@drawable/button_click_background"
            android:clickable="true"
            android:onClick="onClickGetOtp"
            android:text="@string/get_otp"
            android:textColor="#fff" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnGetOTP"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:paddingBottom="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:paddingTop="@dimen/dp_5"
            android:text="@string/skip"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_17" />

    </RelativeLayout>
</LinearLayout>