<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
     >

<include layout="@layout/toolbar"
    android:id="@+id/toolbar"/>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_below="@+id/toolbar"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_automatically"
        android:id="@+id/textView"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textSize="@dimen/sp_11"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:id="@+id/text_view"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="10"
        android:minHeight="@dimen/dp_10"
        android:minWidth="@dimen/dp_335"
        android:progress="0"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/text_view1"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/please_make_sure"
        android:textSize="@dimen/sp_11"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:id="@+id/text_view2"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:text="@string/verifying"
        android:textSize="@dimen/sp_11"
        android:textColor="@color/black" />

</LinearLayout>
    </RelativeLayout>