<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MyAccountActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:id="@+id/rl_my_account1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_my_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/iv_profile_pic"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_5"
                    android:background="@drawable/profile_pic"
                    android:onClick="onClickProfilePicture"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/dp_3">

                </de.hdodenhof.circleimageview.CircleImageView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_my_account"
                android:background="@color/white">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstNameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/first_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="28"
                        android:hint="@string/nameProfile"
                        android:inputType="textPersonName"
                        android:maxLength="28"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_14" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNameLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/firstNameLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_1"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20">

                    <EditText
                        android:id="@+id/last_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="28"
                        android:hint="@string/last_name"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_14" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailIDLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lastNameLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_1"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20">

                    <EditText
                        android:id="@+id/emaill_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="28"
                        android:hint="@string/email_id"
                        android:maxLength="28"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_14" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/professionalFieldLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/emailIDLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_1"
                    android:paddingLeft="@dimen/dp_20"
                    android:paddingRight="@dimen/dp_20">

                    <EditText
                        android:id="@+id/professional_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_15"
                        android:ems="28"
                        android:hint="@string/professional_field"
                        android:maxLength="15"
                        android:singleLine="true"
                        android:textSize="@dimen/sp_14" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_profile_pic">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_40"
                    android:background="@drawable/facebook_button_background"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:paddingLeft="@dimen/dp_15"
                    android:paddingRight="@dimen/dp_15"
                    android:text="@string/facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/facebook_color" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/button_click_background"
                    android:text="@string/save"
                    android:textColor="@color/white" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
